# xwentity

./: .gitignore  README.md  about.md  pyproject.toml  pyproject.xwentity.toml  pytest.ini  requirements.txt
.github/: workflows-config.yaml
.github/workflows/: publish.yml
benchmarks/: INDEX.md
benchmarks/20260209-benchmark index/benchmarks/: INDEX.md
docs/: GUIDE_01_USAGE.md  INDEX.md  README.md  REF_01_REQ.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_14_DX.md  REF_15_API.md  REF_21_PLAN.md  REF_22_PROJECT.md  REF_35_REVIEW.md  REF_50_QA.md  REF_51_TEST.md  REF_54_BENCH.md
docs/_archive/: README.md
docs/changes/: MIGRATION_XWENTITY_REFACTOR.md
docs/compliance/: README.md
docs/logs/: SUMMARY_CHANGE.md  SUMMARY_PLAN.md  SUMMARY_PROJECT.md  SUMMARY_TEST.md
docs/logs/benchmarks/: INDEX.md  MOVED_TO_ROOT.md
docs/logs/feedback/: INDEX.md
docs/logs/releases/: INDEX.md
docs/logs/reviews/: REVIEW_20260207_PROJECT_STATUS.md  REVIEW_20260208_ARCHIVE_DISPOSITION.md  REVIEW_20260305_120000_XWGROUP_DATA_STRATEGY_SCORING.md
docs/logs/tests/: INDEX.md
examples/bluesmyth/: bluesmyth_entities.py  bluesmyth_explorer.py  bluesmyth_files.py
src/: xwentity.py
src/exonware/xwentity/: __init__.py  base.py  collection.py  config.py  contracts.py  defs.py  entity.py  errors.py  facade.py  group.py  metaclass.py  version.py
src/exonware/xwentity/schema/: __init__.py  contracts.py  generator.py  validator.py
tests/: README.md  __init__.py  conftest.py  runner.py
tests/0.core/: __init__.py  conftest.py  runner.py  test_core_action_validation.py  test_core_actions.py  test_core_attribute_delegation.py  test_core_collection_group.py  test_core_data_operations.py  test_core_extensions.py  test_core_factory_methods.py  test_core_format_import_export.py  test_core_initialization.py  test_core_metadata.py  test_core_performance.py  test_core_query_integration.py  test_core_schema_validation.py  test_core_serialization_roundtrip.py  test_core_state_management.py  test_core_validation.py  test_core_xwjson_serialization.py
tests/1.unit/: __init__.py  conftest.py  runner.py
tests/1.unit/base_tests/: __init__.py  test_base_entity.py
tests/1.unit/collection_tests/: __init__.py  test_collection.py
tests/1.unit/config_tests/: __init__.py  test_config.py
tests/1.unit/entity_tests/: __init__.py  test_entity_actions.py  test_entity_data_operations.py  test_entity_edge_cases.py  test_entity_errors.py  test_entity_initialization.py  test_entity_metaclass.py  test_entity_serialization.py  test_entity_state.py  test_entity_validation.py  test_entity_xwnode_integration.py
tests/1.unit/errors_tests/: __init__.py  test_errors.py
tests/1.unit/group_tests/: __init__.py  test_group.py
tests/2.integration/: __init__.py  conftest.py  runner.py  test_integration_end_to_end.py  test_integration_serialization_comprehensive.py  test_integration_serialization_formats.py  test_integration_workflow.py
