
# Source size (src/*): ~204.2 KB
[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  name = "exonware-xwentity"
  dynamic = ["version"]
  description = "Unified entity model with schema, actions, data, metadata, caching, and performance features"
  readme = "README.md"
  requires-python = ">=3.12"
  keywords = ["entity", "object", "schema", "actions", "data", "metadata", "caching", "exonware"]
  classifiers = []
  dependencies = []
  exonware-xwaction = "356878 ; 0.34 MB"
  exonware-xwdata = "514480 ; 0.49 MB"
  exonware-xwschema = "359128 ; 0.34 MB"
  authors = []
  "{ name" = "eXonware Backend Team"

  [project.license]
    text = "MIT"

  [project.optional-dependencies]
    dev = []
    "black>" = "23.0.0\",  # file-size=3914855 ; 3.73 MB"
    "exonware-xwaction[dev]" = "471576084 ; 449.73 MB"
    "exonware-xwdata[dev]" = "197551718 ; 188.40 MB"
    exonware-xwlazy = "349706 ; 0.33 MB"
    "exonware-xwschema[dev]" = "235793285 ; 224.87 MB"
    "isort>" = "5.12.0\",  # file-size=568232 ; 0.54 MB"
    "mypy>" = "1.0.0\",  # file-size=29775254 ; 28.40 MB"
    "pytest>" = "7.0.0\",  # file-size=3152415 ; 3.01 MB"
    "pytest-asyncio>" = "0.21.0\",  # file-size=46752 ; 0.04 MB"
    "pytest-cov>" = "4.0.0\",  # file-size=71639 ; 0.07 MB"
    lazy = []
    "exonware-xwaction[lazy]" = "21233664 ; 20.25 MB"
    "exonware-xwdata[lazy]" = "9909043 ; 9.45 MB"
    "exonware-xwschema[lazy]" = "10622074 ; 10.13 MB"
    full = ["jsonpath-ng"]
    atomicwrites = "25022 ; 0.02 MB"
    bottleneck = "460187 ; 0.44 MB"
    cloudpickle = "125961 ; 0.12 MB"
    cython = "13606517 ; 12.98 MB"
    "exonware-xwaction[full]" = "1290272768 ; 1230.50 MB"
    "exonware-xwdata[full]" = "628264796 ; 599.16 MB"
    "exonware-xwschema[full]" = "658086297 ; 627.60 MB"
    interegular = "196814 ; 0.19 MB"
    lz4 = "277804 ; 0.26 MB"
    numexpr = "742653 ; 0.71 MB"
    pandas = "67223490 ; 64.11 MB"
    pyarrow = "90047710 ; 85.88 MB"
    pytz = "1081137 ; 1.03 MB"
    regex = "1765857 ; 1.68 MB"
    uarray = "225331 ; 0.21 MB"

  [project.urls]
    Homepage = "https://exonware.com"
    Documentation = "https://github.com/exonware/xwentity#readme"
    Repository = "https://github.com/exonware/xwentity"
    Subtree = "https://github.com/exonware/xwentity.git"

[tool]

  [tool.black]
    line-length = 88
    target-version = ["py312"]

  [tool.isort]
    profile = "black"
    line_length = 88

  [tool.mypy]
    python_version = "3.12"
    strict = true
    warn_return_any = true
    warn_unused_configs = true
    disallow_untyped_defs = true
    disallow_any_generics = true
    disallow_untyped_calls = true
    disallow_incomplete_defs = true
    check_untyped_defs = true
    disallow_untyped_decorators = true
    no_implicit_optional = true
    warn_redundant_casts = true
    warn_unused_ignores = true
    warn_no_return = true
    warn_unreachable = true

  [tool.pytest]

    [tool.pytest.ini_options]
      testpaths = ["tests"]
      python_files = ["test_*.py"]
      python_classes = ["Test*"]
      python_functions = ["test_*"]
      addopts = "-v --tb=short"
      markers = []

  [tool.hatch]

    [tool.hatch.version]
      path = "src/exonware/xwentity/version.py"

    [tool.hatch.build]

      [tool.hatch.build.targets]

        [tool.hatch.build.targets.wheel]
          packages = ["src/exonware"]
          py-modules = ["src/xwentity"]

        [tool.hatch.build.targets.sdist]
          include = ["/src", "/tests", "/README.md", "/.github"]
