
# Source size (src/*): ~205.8 KB
# Dependency sizes: run 'commands measure_dependency_sizes xwentity' to refresh
[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  name = "exonware-xwentity"
  dynamic = ["version"]
  description = "Unified entity model with schema, actions, data, metadata, caching, and performance features"
  readme = "README.md"
  requires-python = ">=3.12"
  keywords = ["entity", "object", "schema", "actions", "data", "metadata", "caching", "exonware"]
  classifiers = []
  dependencies = [
    "exonware-xwsystem",
    "exonware-xwaction",
    "exonware-xwnode",
  ]
  authors = [{ name = "eXonware Backend Team", email = "connect@exonware.com" }]

  [project.license]
    text = "MIT"

  [project.optional-dependencies]
    lazy = [
      "exonware-xwlazy",
      "exonware-xwsystem[lazy]",
      "exonware-xwaction[lazy]",
      "exonware-xwdata[lazy]",
      "exonware-xwquery[lazy]",
      "exonware-xwschema[lazy]",
      "exonware-xwnode[lazy]",
    ]
    dev = [
      "exonware-xwlazy",
      "exonware-xwsystem[dev]",
      "exonware-xwaction[dev]",
      "exonware-xwdata[dev]",
      "exonware-xwquery[dev]",
      "exonware-xwschema[dev]",
      "exonware-xwnode[dev]",
      "black>=23.0.0",
      "isort>=5.12.0",
      "mypy>=1.0.0",
      "pytest>=7.0.0",
      "pytest-asyncio>=0.21.0",
      "pytest-cov>=4.0.0",
    ]
    full = [
      "exonware-xwsystem[full]",
      "exonware-xwaction[full]",
      "exonware-xwdata[full]",
      "exonware-xwquery[full]",
      "exonware-xwschema[full]",
      "exonware-xwnode[full]",
    ]

  [project.urls]
    Homepage = "https://exonware.com"
    Documentation = "https://github.com/exonware/xwentity#readme"
    Repository = "https://github.com/exonware/xwentity"
    Subtree = "https://github.com/exonware/xwentity.git"

[tool]

  [tool.black]
    line-length = 88
    target-version = ["py312"]

  [tool.isort]
    profile = "black"
    line_length = 88

  [tool.mypy]
    python_version = "3.12"
    mypy_path = "src"
    strict = true
    warn_return_any = true
    warn_unused_configs = true
    disallow_untyped_defs = true
    disallow_any_generics = true
    disallow_untyped_calls = true
    disallow_incomplete_defs = true
    check_untyped_defs = true
    disallow_untyped_decorators = true
    no_implicit_optional = true
    warn_redundant_casts = true
    warn_unused_ignores = true
    warn_no_return = true
    warn_unreachable = true

  [tool.pytest]

    [tool.pytest.ini_options]
      testpaths = ["tests"]
      python_files = ["test_*.py"]
      python_classes = ["Test*"]
      python_functions = ["test_*"]
      addopts = "-v --tb=short"
      markers = []

  [tool.hatch]

    [tool.hatch.version]
      path = "src/exonware/xwentity/version.py"

    [tool.hatch.build]

      [tool.hatch.build.targets]

        [tool.hatch.build.targets.wheel]
          packages = ["src/exonware"]
          py-modules = ["src/xwentity"]

        [tool.hatch.build.targets.sdist]
          include = ["/src", "/tests", "/README.md", "/.github"]
